[gd_scene load_steps=2 format=3 uid="uid://bvn20eh0pt51y"]

[ext_resource type="Script" path="res://Scripts/Conquest/AttackCursor.gd" id="1_i8ijs"]

[node name="AttackCursor" type="Node2D"]
script = ExtResource("1_i8ijs")

[node name="AttackCursorBackground2" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 72.0
offset_bottom = 72.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="AttackCursorBackground" type="ColorRect" parent="."]
offset_right = 64.0
offset_bottom = 64.0
metadata/_edit_use_anchors_ = true

[node name="AttackCursorBackgroundBottom" type="Polygon2D" parent="."]
visible = false
position = Vector2(0, 8)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-8, 64, 72, 64, 48, 88, 32, 104)

[node name="AttackCursorBackgroundBottom" type="Polygon2D" parent="AttackCursorBackgroundBottom"]
position = Vector2(0, -8)
polygon = PackedVector2Array(0, 64, 64, 64, 32, 96)

[node name="AttackCursorBackgroundTop" type="Polygon2D" parent="."]
visible = false
position = Vector2(0, -16)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(-8, 8, 72, 8, 32, -32)

[node name="AttackCursorBackgroundTop" type="Polygon2D" parent="AttackCursorBackgroundTop"]
position = Vector2(0, 8)
polygon = PackedVector2Array(0, 8, 64, 8, 32, -24)

[node name="AttackCursorLabel" type="Label" parent="."]
modulate = Color(0, 0, 0, 1)
offset_top = -24.0
offset_right = 64.0
offset_bottom = 88.0
theme_override_font_sizes/font_size = 60
text = "5
"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true
